--- a/Project2/SFParkExplorer/app/src/main/res/layout/activity_results_for_cleanliness.xml
+++ b/Project2/SFParkExplorer/app/src/main/res/layout/activity_results_for_cleanliness.xml
@@ -15,14 +15,16 @@
         android:layout_height="wrap_content"
         android:text="Parks"
         android:textSize="50dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ranked least clean to most clean (0 to 10)"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/resultsTextView"/>
+        android:layout_below="@+id/resultsTextView"
+        android:textStyle="bold"/>
 
     <ListView
         android:id="@+id/resultsListView"
@@ -30,6 +32,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/resultsTextView"
         android:layout_marginTop="15dp"
-        ></ListView>
+        android:textStyle="bold"></ListView>
 
 </RelativeLayout>
