--- a/Project2/SFParkExplorer/app/src/main/res/layout/activity_results_for_favorites.xml
+++ b/Project2/SFParkExplorer/app/src/main/res/layout/activity_results_for_favorites.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:text="My Favorite Parks"
         android:textSize="40dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,7 +24,8 @@
         android:text="Long Press to remove"
         android:layout_below="@+id/resultsTextView"
         android:layout_centerHorizontal="true"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:textStyle="bold"/>
 
     <ListView
         android:id="@+id/resultsListView"
@@ -31,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/resultsTextView"
         android:layout_marginTop="15dp"
+        android:textStyle="bold"
         ></ListView>
 
 
