completed favorites page and functionality

--- a/Project2/SFParkExplorer/app/src/main/res/layout/activity_details.xml
+++ b/Project2/SFParkExplorer/app/src/main/res/layout/activity_details.xml
@@ -11,9 +11,10 @@
 
     <LinearLayout
         android:id="@+id/actionButtonsLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@android:color/holo_blue_light">
 
         <Button
             android:id="@+id/addToFavoritesButton"
@@ -27,14 +28,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Remove from Favorites"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_marginLeft="190dp"/>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/actionButtonsLayout"/>
+        android:layout_below="@+id/actionButtonsLayout"
+        android:layout_marginTop="30dp"/>
 
     <TextView
         android:id="@+id/nameTextView"
@@ -42,7 +45,10 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/imageView"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
+        android:textSize="25dp"
+        android:layout_marginTop="20dp"/>
 
 
     <TextView
@@ -51,7 +57,10 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/nameTextView"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@android:color/holo_green_dark"/>
 
     <TextView
         android:id="@+id/busynessTextView"
@@ -59,7 +68,10 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/sizeTextView"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:id="@+id/cleanlinessTextView"
@@ -67,7 +79,10 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/busynessTextView"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"/>
 
 
 </RelativeLayout>
