--- a/Project2/SFParkExplorer/app/src/main/res/layout/activity_results_for_cleanliness.xml
+++ b/Project2/SFParkExplorer/app/src/main/res/layout/activity_results_for_cleanliness.xml
@@ -16,7 +16,8 @@
         android:text="Parks"
         android:textSize="50dp"
         android:layout_centerHorizontal="true"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textColor="@android:color/black"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,14 +25,17 @@
         android:text="Ranked least clean to most clean (0 to 10)"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/resultsTextView"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_red_dark"
+        android:layout_marginTop="20dp"
+        android:textSize="30dp"/>
 
     <ListView
         android:id="@+id/resultsListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/resultsTextView"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="90dp"
         android:textStyle="bold"></ListView>
 
 </RelativeLayout>
