commit right before presentation

--- a/Project2/SFParkExplorer/app/src/main/res/layout/activity_results_for_favorites.xml
+++ b/Project2/SFParkExplorer/app/src/main/res/layout/activity_results_for_favorites.xml
@@ -17,7 +17,8 @@
         android:text="My Favorite Parks"
         android:textSize="40dp"
         android:layout_centerHorizontal="true"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textColor="@android:color/black"/>
 
 
 
